egonlang-core/res/examples/invalid/list_expression_with_typed_identifier_first_item_and_mismatch_type_item.eg
let a = "foo";
let b = [a, "bar", 3];

// out: TypeError: mismatched types: expected type `string` but received `number`